Setup basic project structure for exporting and publishing version to GitHub

--- a/Outputs.Csv/Outputs.Csv.csproj
+++ b/Outputs.Csv/Outputs.Csv.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sql-export-express\Cli\Cli.csproj" />
+    <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
