--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -1,19 +1,31 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+	<Description>A simple and fast command line utility to export data from SQL Server databases into files.</Description>
+	<OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+	<AssemblyName>sql-export-express</AssemblyName>
+	<PackageLicenseExpression>gpl-3.0</PackageLicenseExpression>
+	<TrimMode>partial</TrimMode>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="MinVer" Version="4.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Spectre.Console" Version="0.47.0" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.47.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
+    <ProjectReference Include="..\Outputs.Csv\Outputs.Csv.csproj" />
+    <ProjectReference Include="..\Sources.Mssql\Sources.Mssql.csproj" />
   </ItemGroup>
 
 </Project>
