--- a/Sources.Mssql/Sources.Mssql.csproj
+++ b/Sources.Mssql/Sources.Mssql.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\sql-export-express\Cli\Cli.csproj" />
+    <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
