--- a/dotnet-releaser.toml
+++ b/dotnet-releaser.toml
@@ -1,4 +1,22 @@
 # configuration file for dotnet-releaser
+profile = "custom"
+# Create zip files only for Windows platforms
+[[pack]]
+rid = ["win-x64"]
+kinds = ["zip"]
+# Default targets for Linux/Ubuntu Debian compatible distro with debian and tar packages
+[[pack]]
+rid = ["linux-x64"]
+kinds = ["deb", "tar"]
+# Default targets for Linux/Redhat compatible distro with rpm and tar packages
+[[pack]]
+rid = ["rhel-x64"]
+kinds = ["rpm", "tar"]
+# Default targets for macOS, only tar files for this platform
+[[pack]]
+rid = ["osx-x64", "osx-arm64"]
+kinds = ["tar"]
+
 [msbuild]
 project = "Cli/Cli.csproj"
 
