Added CI pipeline + moved create release pipeline to tag-only push trigger

--- a/.github/workflows/action-create-release.yaml
+++ b/.github/workflows/action-create-release.yaml
@@ -1,10 +1,12 @@
-name: ci
+name: create-release
 
 on: 
   push:
     paths-ignore:
     - 'LICENSE.txt'
     - 'README.md'
+    tags:        
+      - '*'
   workflow_dispatch:
 
 jobs:
