Ignored tag pushes on CI

--- a/.github/workflows/action-ci.yaml
+++ b/.github/workflows/action-ci.yaml
@@ -3,8 +3,8 @@ name: ci
 on: 
   pull_request:
   push:
-    tags-ignore:
-    - '*'
+    branches: 
+    - '**'
     paths-ignore:
     - 'LICENSE.txt'
     - 'README.md'
